<resources>

    <string name="app_name">Beauty Music</string>
    <string name="menu_search">Search</string>
    <string name="menu_change_view">Change View</string>

    <string name="albumArt_description">Default album art</string>
    <string name="track_artist">Unknown Artist</string>
    <string name="track_title">Song Title</string>
    <string name="track_album">Unknown Album</string>

    <string name="alert_permissions_message">You have not granted storage read permission
    to Beauty Music! This permission is required for Beauty Music to access songs on your device.
    If you would like to grant permission to the app, click Okay. To exit, click Cancel.</string>

    <string name="album_art_description">placeHolder for no album art</string>

    <string name="playing_queue">Playing Queue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel_selection">Cancel Selection</string>
    <string name="add_to_queue_and_play">Add to queue and play</string>
    <string name="default_artist">Unknown Artist</string>
    <string name="default_title">Title</string>
    <string name="default_album">Unknown Album</string>
    <string name="default_timer">0:00</string>
    <string name="menu_open_queue">Open Queue</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="tab_songs">Songs</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_artists">Artists</string>

</resources>
