<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/notification_player_background">

    <ImageView
        android:id="@+id/iv_notification_expanded_album_art"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/album_art_background"
        android:src="@drawable/ic_album_white_24dp"
        tools:ignore="ContentDescription"/>


    <LinearLayout
        android:id="@+id/notification_expanded_track_info"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/iv_notification_expanded_album_art"
        android:layout_toRightOf="@+id/iv_notification_expanded_album_art"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_notification_expanded_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:text="@string/default_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_notification_expanded_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/default_artist"
                android:textColor="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tv_notification_expanded_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/default_album"
                android:textColor="@android:color/darker_gray"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/notification_expanded_play_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/notification_expanded_track_info"
        android:layout_alignStart="@+id/notification_expanded_track_info"
        android:layout_below="@+id/notification_expanded_track_info">

        <ImageView
            android:id="@+id/iv_notification_expanded_play_pause"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/button_play_white"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/iv_notification_expanded_next"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/iv_notification_expanded_play_pause"
            android:layout_toRightOf="@+id/iv_notification_expanded_play_pause"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/button_skip_next_white"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/iv_notification_expanded_prev"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/iv_notification_expanded_play_pause"
            android:layout_toStartOf="@+id/iv_notification_expanded_play_pause"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/button_skip_prev_white"
            tools:ignore="ContentDescription"/>

    </RelativeLayout>

</RelativeLayout>